--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,15 @@ p{
     border: none;
     cursor:pointer;
 }
+.bg-dark{
+    background: #333;
+}
 .btn:hover{
     background: #f7c08a;
+    color: #333;
+}
+.btn-light{
+    background: #fff;
     color: #333;
 }
 /* Padding */
@@ -118,6 +125,46 @@ p{
     padding-bottom: 20px;
     line-height: 1.7em;
 }
+/* Home Info */
+#home-info {
+    height: 400px;
+  }
+  
+  #home-info .info-img {
+    float: left;
+    width: 50%;
+    background: url('../img/photo-1.jpg') no-repeat;
+    min-height: 100%;
+  }
+  
+  #home-info .info-content {
+    float: right;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    padding: 50px 30px;
+    overflow: hidden;
+    color: #fff;
+  }
+  
+  #home-info .info-content p {
+    padding-bottom: 30px;
+  }
+  
+  /* Features */
+  .box {
+    float: left;
+    width: 33.3%;
+    padding: 50px;
+    text-align:center;
+    background: #f7c08a;
+    border: black solid 1px;
+  }
+  
+  .box i {
+    margin-bottom: 10px;
+  }
+  
 /* About */
 #about-info .info-right {
     float: right;
@@ -148,7 +195,56 @@ footer{
 footer p{
     text-align: center;
 }
-
+/* Testimoials */
 #testimonials{
-    background: #f7c08a;
+    height: 100%;
+    background: url('../img/test-bg.jpg') no-repeat center center/cover;
+    padding-top: 100px;
+} 
+
+#testimonials .testimonial img{
+    border-radius: 50%;
+    float: right;
+    width: 100px;
+    float: left;
+    margin-right: 20px;
 }
+#testimonials .testimonial{
+    background: #f7c08a;
+    padding: 20px;
+    border-radius: 20px;
+    opacity: 0.9;
+}
+#testimonials h2{
+    color: white;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+/* Contact Form */
+
+#contact-form .form-group {
+    margin-bottom: 20px;
+  }
+  
+  #contact-form label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  #contact-form input, 
+  #contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px #ddd solid;
+  }
+  
+  #contact-form textarea {
+    height: 200px;
+  }
+  
+  #contact-form input:focus, 
+  #contact-form textarea:focus {
+    outline: none;
+    border-color: #f7c08a;
+  }
